--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorHeader">#695a63</color>
     <color name="white">#ffffff</color>
     <color name="colorButtonMedium">#5c0b28</color>
+    <color name="colorSubtitle">#ba8900</color>
 </resources>
