--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -24,7 +24,7 @@
                 android:layout_height="100dp"
                 android:height="70dp"
                 android:background="@color/colorButtonMediumDark"
-                android:text="Create CV"
+                android:text="@string/create_cv"
                 android:textColor="@color/white"
                 android:textSize="25dp" />
 
@@ -34,7 +34,7 @@
                 android:layout_height="100dp"
                 android:height="70dp"
                 android:background="@color/colorButtonMedium"
-                android:text="View CV"
+                android:text="@string/view_cv"
                 android:textColor="@color/white"
                 android:textSize="25dp" />
 
@@ -44,7 +44,7 @@
                 android:layout_height="100dp"
                 android:height="70dp"
                 android:background="@color/colorButtonLightMedium"
-                android:text="Generate XML"
+                android:text="@string/generate_xml"
                 android:textColor="@color/white"
                 android:textSize="25dp" />
 
@@ -54,7 +54,7 @@
                 android:layout_height="100dp"
                 android:height="70dp"
                 android:background="@color/colorButtonLight"
-                android:text="Tips"
+                android:text="@string/tips"
                 android:textColor="@color/white"
                 android:textSize="25dp" />
 
@@ -64,7 +64,7 @@
                 android:layout_height="100dp"
                 android:height="70dp"
                 android:background="@color/colorButtonLightest"
-                android:text="Progress"
+                android:text="@string/progress"
                 android:textColor="@color/white"
                 android:textSize="25dp" />
 
